adjusts width to ensure all bookmarks stay the same width and account for width changes without becoming uneven lengths

--- a/src/components/CustomCollection/CustomCollection.module.scss
+++ b/src/components/CustomCollection/CustomCollection.module.scss
@@ -107,5 +107,5 @@ button.collectionSettingsDropdown {
 
 .dragBookmark {
   margin-left: 10px;
-  width: 100%;
+  width: calc(100% - 1rem - 10px);
 }
